# Spinning-Top-Simulation

./: .gitmodules  CMakeLists.txt  README.md  TODO.txt  makeScript
.github/workflows/: cmake.yml
cmake/: FindASSIMP.cmake  FindGLEW.cmake  FindSOIL.cmake
include/: AABB.h  Assets.h  Body.h  Camera.h  Collision.h  Color.h  Contact.h  DebugPoint.h  InertiaTensor.h  IntersectionTest.h  Material.h  Mesh.h  OOBB.h  PointLight.h  RigidBody.h  RigidBodyFactory.h  Shader.h  Simulation.h  Texture.h  Triangle.h
libraries/: libSOIL.dylib  libglfw3.3.dylib
models/: cube.dae  sphere.dae  suzanne.dae
res/: info.plist  info.rc  spinningtops.icns
res/shaders/: phong.glslv  planarShadows.glslf  skybox.glslf
shaders/: phong.glslf  phong_fragment.glsl  phong_vertex.glsl  planarShadows.glslf  planarShadows.glslv  skybox.glslv  texture_fragment.glsl  texture_vertex.glsl  texturedPhong.glslf  texturedPhong.glslv
src/: AABB.cpp  Assets.cpp  Body.cpp  Camera.cpp  Main.cpp  Material.cpp  Mesh.cpp  OOBB.cpp  PointLight.cpp  RigidBody.cpp  RigidBodyFactory.cpp  Shader.cpp  Simulation.cpp  Texture.cpp
